redundant code removed. Fixed horizontal scroll.

--- a/public/CSS/body.css
+++ b/public/CSS/body.css
@@ -7,4 +7,11 @@ body {
     width: 100vw;
     height: 800%;
     overflow-x: hidden; /* Prevent horizontal scrolling */
+    width: 100%;
+    position: relative;
+}
+
+* {
+  box-sizing: border-box;
+  max-width: 100vw;
 }
